@@ -30,8 +30,8 @@ License: GPL (>=3)
 Encoding: UTF-8
 Authors@R: c(person(given="Henrik", family="Singmann",
     email="henrik.singmann@psychologie.uni-freiburg.de", role=c("aut", "cre")))
-Version: 0.3-37
-Date: 2012-08-23
+Version: 0.3-38
+Date: 2012-08-24
 Collate:
     'afex-package.R'
     'aov.car.R'
