@@ -15,6 +15,8 @@
 	
 	o	added return argument to aov.car() and ez.glm().
 	
+	o	added rather dubious Type 2 tests to mixed().
+	
 	Bugfixes
 	
 	o	aov.car now uses do.call when calling lm() to avoid local
@@ -22,5 +24,5 @@
 		working with the lm model.
 	
 	o	mixed() now passes ... (further arguments to lmer) correctly.
-		Now uses match.call and eval on the call instead of invoking lmer
-		directly.
+		(Now mixed uses match.call and eval on the call instead of 
+		invoking lmer directly.)
